# ten10

./: .env.example  .eslintrc.cjs.example  .gitattributes  .gitignore  AGENTS.md  CURRENCY_CONVERSION_AUDIT_REPORT.md  ENHANCED_LANDING_PAGE_GUIDE.md  INSTRUCTIONS.md  LANDING_PAGE_README.md  LICENSE  LLM_INSTRUCTIONS.md  README.md  REMINDER_FEATURE_README.md  TODO.md  data.json  index.html  package-lock.json  package.json  platform-context-api-guide.md  project-overview-final.html  project-overview.md  realistic_data_2023-06_to_2025-05.json  stagewise.json  tailwind.config.js  ten10_backup_desktop_2025-06-17.json  transactions-implementation-guide.md  tsconfig.app.json  twa-manifest.json  vercel.json  vite.config.ts  vitest.config.ts
.cursor/plans/: add_chomesh_expense_type.plan.md  currency_conversion_feature_271bee9e.plan.md  github_issue.md  github_issue_template.md  issue_body.md  public-stats-feature-summary.md  transaction_import_feature.plan.md
.cursor/rules/: supabase-database-migrations.mdc  supabase-edge-functions.mdc
.github/: dependabot.yml  downloads.json  public-stats.json
.github/workflows/: deploy-supabase-functions.yml  deploy-supabase-migrations.yml  keep_supabase_alive.yml  release.yml  security-audit.yml  tauri-build-check.yml  update-downloads-badge.yml  update-public-stats.yml
android-build/: .gitignore  app-release-signed.apk.idsig  twa-manifest.json
docs/: LOGGER_README.md  language-sync-fix.md  logger-migration-guide.md  logger-utility-summary.md
infrastructure/cloudflare/: email-worker.js  wrangler.toml
llm-instructions/: FINAL_LANDING_PAGE_SUMMARY.md  code-signing-guide.md  data-flow-server-calculations-and-cleanup.md  desktop-data-saving-guide.md  desktop-release-system-guide.md  email-reminders-feature-complete-guide.md  email-system-future-improvements.md  email-unsubscribe-system-guide.md  halacha-page-revamp-plan.md  landing-page-complete-guide.md  migration-guide.md  multi-language-and-responsive-design-guide.md  platform-context-api-guide.md  project-overview-and-requirements.md  project-structure.md  project-tech-stack-and-guidelines.md  recurring-transactions-implementation-guide.md  release-management-guide.md  server-side-tithe-balance-calculation-guide.md  session_summary_monthly_chart_platform_issues.md  setup-updater-keys.md  supabase-integration-status.md  tauri-v2-build-and-platform-detection-summary.md  transaction-data-model-and-calculations.md  transactions-table-implementation-status.md  transactions-table-technical-overview.md  translation-map.md  ui-component-guidelines.md
llm-instructions/backend/: data-flow-server-calculations-and-cleanup.md  security-hardening-jan-2026.md  server-side-tithe-balance-calculation-guide.md  supabase-database-migrations-workflow.md  supabase-edge-functions-maintenance.md  supabase-integration-status.md  (+2 more)
public/: loader.css  manifest.json
scripts/: check-cron-jobs.js  check-supabase-imports.js  convert-oklch-to-hsl.mjs  find-console-usage.js  get-release-downloads.ps1  prepare-components.js  release.cjs  tauri-build-all.cjs  tauri-cli.cjs  test-reminder-email.js  update-downloads-badge.js  update-public-stats.js
src/: App.tsx  declarations.d.ts  index.css  main.tsx  routes.ts
src-tauri/: 2.0.0-rc  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: Hebrew.nsh
src-tauri/src/: main.rs  models.rs  transaction_types.rs
src-tauri/src/commands/: analytics_commands.rs  chart_commands.rs  db_commands.rs  donation_commands.rs  expense_commands.rs  import_commands.rs  income_commands.rs  insights_commands.rs  mod.rs  platform_commands.rs  recurring_transaction_commands.rs  transaction_commands.rs
src-tauri/windows/: clean-webview.nsh
supabase/: MIGRATION_VAULT_SETUP.md  auth-email-templates.md  config.toml
(+600 files in other folders)
