[package]
name = "Ten10"
version = "0.2.6"
description = "Ten10 - Income and Donation Management App"
authors = ["Yossi Weinberger"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
# sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] } # Removed sqlx
chrono = { version = "0.4.35", features = ["serde"] }
log = "0.4.21"
env_logger = "0.11.3"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-os = "2.2.1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "Ten10"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
